# mownit-desktop

mownit-app/: CMakeLists.txt  PointsModel.cpp  PointsModel.h  README.md  Spline-obliczenia.cpp  Ui_MainWindow.h  calculation_no_qt.cpp  calculations.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  tests_main.cpp  testy.cpp
mownit-app/qcustomplot-source/: interpolationDrawing.cpp
mownit-app/sprawko/: main.tex
mownit-app/sprawko/zad2b/: sprawko.tex
mownit-app/sprawko/zad2b/tex/: 01_title_page.tex
mownit-app/window/: mainwindow.cpp  mainwindow.h  mainwindow.ui
mownit-app/zad2b/: sprawko.tex
mownit-app/zad2b/tex/: 00_preambule.tex  01_title_page.tex
mownit-app/zad3/: sprawko.tex
mownit-app/zad3/tex/: 00_preambule.tex
